--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,23 @@ overflow: hidden;
 background: linear-gradient(#87CEEB, #E0F6FF);
 }
 
+p{
+    text-align: center;
+    padding-top: 10px;
+    font-size: large;
+    font-weight: bold;
+    font-family: Arial black;
+}
+
+.restart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
  button{ 
-    margin-top: 30px;
-    margin-left: 570px;
+    border: solid 2px black;
+    margin-top: 10px;
     padding: 30px;
     border-radius: 40px;
     background: blue;
@@ -26,6 +40,11 @@ background: linear-gradient(#87CEEB, #E0F6FF);
     font-family: arial black;
    
 }
+
+    button:hover{
+        background: transparent;
+        color: blue;
+    }
 
 
 
@@ -41,10 +60,16 @@ background: linear-gradient(#87CEEB, #E0F6FF);
 .ave{
 
     position: absolute;
-    width: 80px;
-    animation: ave-animation 15s infinite linear;
+    width: 70px;
+    animation: ave-animation 18s infinite linear;
 }
 
+.ave-2{
+    position: absolute;
+    top: 30%;
+    width: 150px;
+    animation: ave-animation 15s infinite linear;
+}
 
 
 .mario{
@@ -65,6 +90,12 @@ background: linear-gradient(#87CEEB, #E0F6FF);
     position: absolute;
     width: 300px;
     animation: clouds-animation 20s infinite linear;
+}
+
+.clouds-2{
+    position: absolute;
+    width: 300px;
+    animation: clouds2-animation 15s infinite linear;
 }
 
 /* animação do cano verde: pipe-animation
@@ -108,6 +139,17 @@ Eles definem como a animação será em cada estágio de sua linha do tempo: ini
 } 
 
 @keyframes clouds-animation {
+    
+    from{
+        right: -550px;
+    }
+
+    to{
+        right: 100%;
+    }
+}
+
+@keyframes clouds2-animation {
     
     from{
         right: -550px;
